feat: convert manifest from txt to json file